--- a/css/index.css
+++ b/css/index.css
@@ -6,13 +6,21 @@ body {
 
 .content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
+    font-size: 24px;
 }
 
 .content #message {
-    font-size: 32px;
+    font-size: 48px;
     color: rgb(255, 255, 255);
     text-align: center;
+}
+
+.content #social_accounts {
+    color: rgb(255, 255, 255);
+    font-size: 32px;
 }
