--- a/css/page.css
+++ b/css/page.css
@@ -6,6 +6,8 @@ body, html {
     color: rgb(255, 255, 255);
 }
 
+/* ---------------- Шапка страницы ---------------- */
+
 .header {
     padding: 5px;
     background-color: rgb(48, 52, 66);
@@ -13,29 +15,32 @@ body, html {
     height: 48px;
     float: left;
     position: fixed;
-    box-shadow: 0 0 16px rgba(64, 68, 82, .0);
+    box-shadow: 0 0 16px rgba(64, 68, 82, 0.0);
     z-index: 5000;
 }
 
 .header #logo {
-    float: left;
     color: rgb(255, 255, 255);
     cursor: pointer;
+    position: relative;
 }
 
 .header #logo-icon {
-    background-image: url("content/images/favicon.ico");
-    background-size: cover;
+    background-image: url("content/images/favicon.png");
     width: 48px;
     height: 48px;
-    float: left;
 }
 
+.header #logo-text {
+    float: left;
+    font-family: "montserrat-medium";
+    font-size: 24px;
+    margin-left: 10px;
+}
+
+/* ---------------- Основная часть страницы ---------------- */
+
 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     font-size: 24px;
     position: relative;
@@ -44,6 +49,7 @@ body, html {
 .content #fluid-canvas {
     width: 100%;
     height: 100%;
+    background-color: rgb(0, 0, 0);
 }
 
 .content #main-text {
@@ -52,6 +58,8 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* ---------------- Нижняя часть страницы ---------------- */
 
 .footer {
     display: flex;
