--- a/css/index.css
+++ b/css/index.css
@@ -1,2 +1,11 @@
 @import url("main.css");
 @import url("page.css");
+
+.content #main-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    text-align: center;
+}
