--- a/css/page.css
+++ b/css/page.css
@@ -9,33 +9,34 @@ body, html {
 /* ---------------- Шапка страницы ---------------- */
 
 .header {
-    padding: 5px;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.75);
     background-color: rgb(48, 52, 66);
     width: 100%;
     height: 48px;
-    float: left;
+    z-index: 8192;
     position: fixed;
-    box-shadow: 0 0 16px rgba(64, 68, 82, 0.0);
-    z-index: 5000;
 }
 
 .header #logo {
-    color: rgb(255, 255, 255);
     cursor: pointer;
-    position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .header #logo-icon {
-    background-image: url("content/images/favicon.png");
-    width: 48px;
-    height: 48px;
+    background-image: url("../content/images/favicon.ico");
+    background-size: cover;
+    width: 38px;
+    height: 38px;
+    float: left;
+    margin: 5px;
 }
 
 .header #logo-text {
-    float: left;
     font-family: "montserrat-medium";
-    font-size: 24px;
-    margin-left: 10px;
+    font-size: 20px;
+    float: left;
+    margin: 4px;
 }
 
 /* ---------------- Основная часть страницы ---------------- */
@@ -50,13 +51,6 @@ body, html {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0);
-}
-
-.content #main-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 /* ---------------- Нижняя часть страницы ---------------- */
@@ -102,3 +96,16 @@ body, html {
     bottom: 0;
     margin: 16px;
 }
+
+.footer #site-version {
+    font-family: "montserrat-regular";
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.05);
+
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 16px;
+    padding-bottom: 20px;
+}
+
