--- a/css/page.css
+++ b/css/page.css
@@ -72,7 +72,7 @@ body, html {
     margin: 16px;
 }
 
-.footer #feedback {
+.footer #footer-content {
     font-family: "montserrat-regular";
     font-size: 16px;
     color: rgb(255, 255, 255);
@@ -82,8 +82,19 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
 
+    display: flex;
+    flex-direction: row;
+}
+
+.footer-content-item {
     text-align: center;
     line-height: 1.5;
+}
+
+.footer-content-item:not(:last-child) {
+    border-right: 1px solid rgba(255, 255, 255, 0.15);
+    padding-right: 16px;
+    margin-right: 16px;
 }
 
 .footer #github-pages {
