--- a/css/page.css
+++ b/css/page.css
@@ -8,7 +8,7 @@ body, html {
 
 /* ---------------- Шапка страницы ---------------- */
 
-.header {
+header {
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.75);
     background-color: rgb(48, 52, 66);
     width: 100%;
@@ -17,13 +17,13 @@ body, html {
     position: fixed;
 }
 
-.header #logo {
+header #logo {
     cursor: pointer;
     display: flex;
     align-items: center;
 }
 
-.header #logo-icon {
+header #logo-icon {
     background-image: url("../content/images/favicon.ico");
     background-size: cover;
     width: 38px;
@@ -32,7 +32,7 @@ body, html {
     margin: 5px;
 }
 
-.header #logo-text {
+header #logo-text {
     font-family: "montserrat-medium";
     font-size: 20px;
     float: left;
@@ -41,13 +41,16 @@ body, html {
 
 /* ---------------- Основная часть страницы ---------------- */
 
-.content {
+content {
     height: 100vh;
     font-size: 24px;
+
+    display: flex;
+    align-items: flex-end;
     position: relative;
 }
 
-.content #fluid-canvas {
+content #fluid-canvas {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0);
@@ -55,7 +58,7 @@ body, html {
 
 /* ---------------- Нижняя часть страницы ---------------- */
 
-.footer {
+footer {
     display: flex;
     align-items: flex-end;
     width: 100%;
@@ -65,14 +68,14 @@ body, html {
     position: relative;
 }
 
-.footer #copyright {
+footer #copyright {
     font-family: "montserrat-regular";
     font-size: 16px;
     color: rgb(255, 255, 255);
     margin: 16px;
 }
 
-.footer #footer-content {
+footer #footer-content {
     font-family: "montserrat-regular";
     font-size: 16px;
     color: rgb(255, 255, 255);
@@ -84,6 +87,7 @@ body, html {
 
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .footer-content-item {
@@ -97,7 +101,7 @@ body, html {
     margin-right: 16px;
 }
 
-.footer #github-pages {
+footer #github-pages {
     font-family: "montserrat-regular";
     font-size: 16px;
     color: rgba(255, 255, 255, 0.15);
@@ -108,7 +112,7 @@ body, html {
     margin: 16px;
 }
 
-.footer #site-version {
+footer #site-version {
     font-family: "montserrat-regular";
     font-size: 16px;
     color: rgba(255, 255, 255, 0.15);
