--- a/css/pages/singin.css
+++ b/css/pages/singin.css
@@ -7,8 +7,14 @@ content #main-content {
     left: 50%;
     transform: translate(-50%, -50%);
 
+    line-height: 2.0;
+
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
+}
+
+content #main-content #webm {
+    margin-bottom: 24px;
 }
